test/resources/typer/failing/IfCase2.scala
object IfCase2
  val a:Int(32)=3;
  if (a==2 ; 6) { "I'm happy" } else {"I want " ++ "to die"}
end IfCase2